--- a/view/component/style/modal.css
+++ b/view/component/style/modal.css
@@ -65,7 +65,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    overflow-y: scroll;
+    overflow-y: auto;
     height: 70vh;
 }
 .modal .modal-body > button {
