--- a/view/page/style/welcome.css
+++ b/view/page/style/welcome.css
@@ -2,6 +2,7 @@
 @import url("../../component/style/navbar.css");
 @import url("../../component/style/modal.css");
 @import url("../../component/style/form.css");
+@import url("../../component/style/alert_me.css");
 
 body {
     background-color: #F3F3F3;
