Mis AR, subir AR y FileControl
- Seccion de mis AR y la opcion de activar el modo desarrollador para poder subir ARs.
- Se comenzo la seccion para subir ARs, solo falta mandar la informacion del formulario a la base de datos.
- Se creo la libreria FileControl para la gestion inputs de imagenes

--- a/view/component/style/global.css
+++ b/view/component/style/global.css
@@ -7,3 +7,24 @@ html, body {
 .invisible {
     visibility: hidden;
 }
+
+.button-danger,
+.button-success {
+    color: white;
+    font-weight: bold;
+    font-size: 1rem;
+    border: 1px solid black;
+}
+
+.button-danger {
+    background-color: rgb(230, 0, 0);;
+}
+.button-danger:active {
+    background-color: rgb(255, 0, 0);
+}
+.button-success {
+    background-color: rgb(55, 179, 55);
+}
+.button-success:active {
+    background-color: rgb(77, 189, 77);
+}
