--- a/view/component/style/modal.css
+++ b/view/component/style/modal.css
@@ -49,6 +49,7 @@
     margin-left: 1rem;
     cursor: pointer;
     color: black;
+    align-self: flex-start;
     background-color: transparent;
     border: none;
 }
@@ -66,6 +67,9 @@
     flex-direction: column;
     align-items: center;
     overflow-y: auto;
+    height: min-content;
+}
+.modal > .modal-card-big > .modal-body {
     height: 70vh;
 }
 .modal .modal-body > button {
