Mis AR y subir aplicacion
Secciones nuevas
Se agregó la sección para subir aplicaciones nuevas y se hizo la sección para que los desarrolladores vean sus aplicaciones subidas.

Componentes
 Para  hacer la sección de Mis AR, se realizo un componente para reutilizarlo en la futura sección donde los consumidores pueden buscar aplicaciones para descargar.

Refactorización
- El campo aplication.fk_aplication_id anteriormente era único y no me estaban dejando crear mas de una aplicación por lo que ya no es único.
- La clase .dropdown en los estilos de componente Navbar se volvio global, pues antes los estilos de .dropdown solo funcionaban si estaban dentro de un navbar.

--- a/view/component/style/form.css
+++ b/view/component/style/form.css
@@ -33,6 +33,13 @@ form > h2 {
     border-radius: 5px;
     border: 1px solid #B0B0B0;
 }
+.input > select {
+    padding-top: 1rem;
+    padding-left: .5rem;
+    height: 3rem;
+    border-radius: 5px;
+    border: 1px solid #B0B0B0;
+}
 .input > textarea {
     padding-top: 1rem;
     padding-left: .5rem;
@@ -117,6 +124,10 @@ form > p > span {
     display: flex;
     scroll-snap-align: start;
 }
+.file-container > .file-images > .file-image > img {
+    height: 100%;
+    background-color: rgb(145, 145, 145);
+}
 .file-container > .file-images > .file-image > .file-remove {
     opacity: 0;
     display: block;
@@ -177,4 +188,8 @@ form > p > span {
     padding-right: .3rem;
 }
 .file-container > .file-button:hover {
+}
+
+input + span.input-log {
+    display: block;
 }
