--- a/web/src/components/atoms/Input/styles.css
+++ b/web/src/components/atoms/Input/styles.css
@@ -2,6 +2,7 @@
   position: relative;
   display: flex;
   align-items: center;
+  width: 15em;
 }
 .inputContainer > .inputTitle {
   position: absolute;
@@ -19,6 +20,7 @@
   height: 3em;
   border-radius: 5px;
   padding: 0 .7em;
+  width: 100%;
 }
 .inputContainer > .inputWithIconLeft {
   padding-left: 2.5em;
