--- a/web/src/components/molecules/InputText/styles.css
+++ b/web/src/components/molecules/InputText/styles.css
@@ -3,9 +3,29 @@
   display: flex;
   flex-direction: column;
   margin-bottom: .5em;
+  justify-content: center;
 }
 .inputTextLabel {
 }
 .inputTextError {
   color: var(--danger);
+}
+.inputTextPasswordIcon {
+  position: absolute;
+  right: .5em;
+  display: flex;
+  font-size: 1rem;
+  z-index: 1;
+  height: 2rem;
+  width: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--main4);
+  border-radius: 50%;
+  cursor: pointer;
+  border: 2px solid transparent;
+}
+.inputTextPasswordIcon:hover {
+  border-color: var(--main2);
 }
