form interface mejorada
- implementada forma de agregar valores iguales a otros (para password y confirm password) dentro de los custom hooks
- implementado el modal de signup (solo mockup)
- agregado scroll al body de los modals

--- a/web/src/components/atoms/Modal/styles.css
+++ b/web/src/components/atoms/Modal/styles.css
@@ -17,6 +17,9 @@
   border-radius: 5px;
   border: 2px solid var(--main2);
   padding: 1em;
+  position: relative;
+  display: flex;
+  flex-direction: column;
 }
 .modalHeader {
   display: flex;
@@ -40,5 +43,6 @@
   color: var(--danger);
 }
 .modalBody {
-
+  overflow-y: auto;
+  flex: 1;
 }
