nuevo mock de home con categorias y arreglados problemas menores

--- a/web/src/assets/theme/light.css
+++ b/web/src/assets/theme/light.css
@@ -3,6 +3,8 @@
   --main2: black;
   --main3: gold;
   --main4: #f3f3f3;
+  --main5: #dddddd;
+  --main6: #bbbbbb;
   --shadow: #bbbbbb;
   --danger: red;
   --success: green;
