--- a/web/src/components/atoms/CustomButton/styles.module.css
+++ b/web/src/components/atoms/CustomButton/styles.module.css
@@ -13,6 +13,9 @@
   align-items: center;
   justify-content: center;
 }
+.flex {
+  width: 100%;
+}
 .buttonContainer:hover {
   background-color: var(--main3);
 }
