--- a/web/src/layouts/FlexContainer/styles.module.css
+++ b/web/src/layouts/FlexContainer/styles.module.css
@@ -4,3 +4,11 @@
 .column {
   flex-direction: column;
 }
+.verticalCentered {
+  align-items: center;
+  align-content: center;
+}
+.horizontalCentered {
+  justify-items: center;
+  justify-content: center;
+}
