--- a/web/src/components/atoms/Input/styles.module.css
+++ b/web/src/components/atoms/Input/styles.module.css
@@ -2,7 +2,7 @@
   position: relative;
   display: flex;
   align-items: center;
-  width: 15em;
+  width: inherit;
 }
 .inputContainer > .inputTitle {
   position: absolute;
