--- a/web/src/components/atoms/InputDropdown/styles.module.css
+++ b/web/src/components/atoms/InputDropdown/styles.module.css
@@ -1,23 +1,32 @@
 .container {
+  margin-bottom: .5em;
   width: 20em;
+}
+.wrapper {
+  width: inherit;
   background-color: var(--main1);
   box-shadow: 0px 2px 4px var(--shadow);
   height: 3em;
-  margin-bottom: .5em;
   border-radius: 5px;
   position: relative;
 }
-.title {
-  position: absolute;
+.loading {
+}
+.headerContainer {
   padding: 0 .7em;
+  position: absolute;
+  display: flex;
+  align-items: center;
+}
+.title {
   color: var(--main2);
   font-weight: 500;
   font-size: .9rem;
+  margin-right: .3em;
 }
 .select {
   padding: 0 .7em;
   border: none;
-  font-weight: bold;
   padding-top: 2em;
   height: 100%;
   border-radius: 5px;
