--- a/web/src/components/molecules/InputSearch/styles.module.css
+++ b/web/src/components/molecules/InputSearch/styles.module.css
@@ -1,5 +1,23 @@
+.container {
+  position: relative;
+  justify-content: center;
+}
 .inputIcon {
   position: absolute;
   padding-left: .5em;
   font-size: 1.2rem;
+}
+.resultsContainer {
+  display: none !important;
+  position: absolute;
+  top: calc(100% + .5em);
+  padding: .5em;
+  width: 40vw;
+  border-radius: 5px;
+  z-index: 1;
+  background-color: var(--main1);
+  box-shadow: 0px 2px 4px var(--shadow);
+}
+.container:focus-within > .resultsContainer {
+  display: initial !important;
 }
