agregados componentes para cargar y crear comentarios de una app, el componente de comentarios aun no esta terminado

--- a/web/src/components/atoms/Form/styles.module.css
+++ b/web/src/components/atoms/Form/styles.module.css
@@ -1,9 +1,7 @@
 .formContainer {
   width: 100%;
-  display: flex;
-  flex-direction: column;
   align-items: center;
 }
-.formContainer > .inputTextContainer {
-  
+.rowContainer {
+  align-items: flex-start;
 }
