--- a/web/src/components/molecules/CustomForm/styles.module.css
+++ b/web/src/components/molecules/CustomForm/styles.module.css
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+.containerPadding {
   padding: 2em;
 }
 .signFormTitle {
@@ -16,4 +18,7 @@
 }
 .backButton {
   margin-right: .5em;
+}
+.buttonRow {
+  margin-left: .5em;
 }
