--- a/web/src/components/molecules/FilterButton/styles.module.css
+++ b/web/src/components/molecules/FilterButton/styles.module.css
@@ -1,10 +1,18 @@
 .container {
-  background-color: var(--main2);
-  color: var(--main1);
   padding: .3em .6em;
   margin: 0 .5em;
   display: flex;
   align-items: center;
+  cursor: pointer;
+}
+.bgPrimary {
+  color: var(--main1);
+  background-color: var(--main2);
+}
+.bgSecondary {
+  color: var(--main2);
+  font-weight: 500;
+  background-color: var(--main6);
 }
 .invisible {
   visibility: hidden;
