--- a/web/src/components/molecules/ArDetailsContent/styles.module.css
+++ b/web/src/components/molecules/ArDetailsContent/styles.module.css
@@ -18,8 +18,13 @@
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: auto;
 }
-.image {
+.imageContainer {
   height: 15em;
   width: inherit;
+  position: relative;
+}
+.image {
   object-fit: cover;
+  height: inherit;
+  width: inherit;
 }
