added popups messages to stats buttons in app details screen

--- a/web/src/components/atoms/IconNumber/styles.module.css
+++ b/web/src/components/atoms/IconNumber/styles.module.css
@@ -6,3 +6,15 @@
 .text {
   padding-left: .1em;
 }
+.popupContainer {
+  display: none;
+}
+.container:hover + .popupContainer {
+  display: block;
+  position: absolute;
+  padding: .5em;
+  background-color: var(--main2);
+  color: white;
+  margin-top: .3em;
+  border-radius: 5px;
+}
