implemented achievements notifications and profile achivemetns added, also level ssystem implemented

--- a/web/src/components/molecules/ProfileNav/styles.module.css
+++ b/web/src/components/molecules/ProfileNav/styles.module.css
@@ -4,6 +4,7 @@
   background-color: var(--main5);
   border-radius: 5px;
   padding-bottom: 1em;
+  box-shadow: 0px 2px 4px var(--shadow);
 }
 .imageContainer {
   padding: .5em;
