--- a/web/src/components/pages/MyProfile/styles.module.css
+++ b/web/src/components/pages/MyProfile/styles.module.css
@@ -1,9 +1,10 @@
 .container {
 }
 .dynamicContainer {
-  background-color: var(--main6);
+  background-color: var(--main5);
   flex: 1;
   margin-left: .5em;
   border-radius: 5px;
   padding: 1em;
+  box-shadow: 0px 2px 4px var(--shadow);
 }
