--- a/web/src/components/molecules/ProfileAboutMe/styles.module.css
+++ b/web/src/components/molecules/ProfileAboutMe/styles.module.css
@@ -1,30 +1,11 @@
 .container {
-  width: 100%;
-  align-items: flex-start;
+  width: inherit;
 }
-.section {
-  width: 100%;
-  align-items: flex-start;
+.imageContainer {
   margin-bottom: 2em;
 }
-.formContainer {
-  width: 100%; 
-  align-items: flex-start;
-}
-.submitContainer {
-  width: 100%;
-  display: block;
-  margin-right: auto;
-}
-.tripleColumnGrid {
+.infoContainer {
   display: grid;
-  width: 100%;
-  grid-template-columns: repeat(4, 1fr);
-  place-items: flex-start;
-}
-.input {
-  width: max-content;
-}
-.sectionHeader {
-  margin-bottom: 1em;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 1em;
 }
